@@ -43,7 +43,7 @@ public class version {
     /**
      * compile day
      */
-    public final static int day = 5;
+    public final static int day = 6;
 
     /**
      * statement of release
