@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.12.5-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-12-05 21:05:01, took 00:09:47, with 50 workers, on 844 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2025-12-05 22:53:16, took 00:09:51, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
