@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.12.5-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-12-05 21:05:01, took 00:09:47, with 50 workers, on 844 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2025-12-05 22:53:16, took 00:09:51, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
